--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -117,9 +117,100 @@
             </div>
         </div>
     </section>
+
+    <section class="section-meals">
+        <div class="container">
+            <span class="subheading center">Meals</span>
+            <h2 class="heading-secondary center">Omnifood AI chooses from 5,000+ recipes</h2>
+        </div>
+
+        <div class="container grid grid--3--cols margin-bottom-md">
+            <div class="meal">
+                <img src="img/meals/meal-1.jpg" alt="Japanese Gyozas" class="meal-img">
+                <div class="meal-content">
+
+                    <div class="meal-tags">
+                        <span class="tag tag-vegeterian">Vegeterian</span>
+                    </div>
+                    <p class="meal-title">Japanese Gyozas</p>
+                    <ul class="meal-atributes">
+                        <li class="meal-atribute">
+                            <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                            <strong>650</strong>Calories</li>
+                            <li class="meal-atribute"><ion-icon class="meal-icon" name="nutrition-outline"></ion-icon>NutriScore &reg; <strong>74</strong></li>
+                            <li class="meal-atribute"><ion-icon class="meal-icon" name="star-half-outline"></ion-icon><strong>4.9</strong> rating (537)</li>                        
+                        </ul>
+                    </div>
+                </div>
+                <div class="meal">
+                    <img src="img/meals/meal-2.jpg" alt="Avocado Salad" class="meal-img">
+                    <div class="meal-content">
+    
+                        <div class="meal-tags">
+                            <span class="tag tag-vegeterian">Vegeterian</span>
+                            <span class="tag tag-paleo">Paleo</span>
+                        </div>
+                        <p class="meal-title">Avocado Salad</p>
+                        <ul class="meal-atributes">
+                            <li class="meal-atribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <strong>400</strong>Calories</li>
+                                <li class="meal-atribute"><ion-icon class="meal-icon" name="nutrition-outline"></ion-icon>NutriScore &reg; <strong>92</strong></li>
+                                <li class="meal-atribute"><ion-icon class="meal-icon" name="star-half-outline"></ion-icon><strong>4.8</strong> rating (491)</li>                        
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="diets">
+                        <h3 class="heading-tertiary">Works with any diet:</h3>
+                        <ul class="list">
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Vegetarian</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Vegan</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Pescatarian</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Gluten-free</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Lactose-free</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Keto</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Paleo</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Low FODMAP</span> 
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Kid-friendly</span> 
+                            </li>
+                        </ul>    
+                    </div>                
+        </div>
+
+        <div class="container all-recipes">
+            <a href="#" class="link margin-bottom-md">See all recepies &rarr;</a>
+        </div>
+    </section>
 </main>
     
-
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
